--- a/4-1.volume介绍.md
+++ b/4-1.volume介绍.md
@@ -27,3 +27,39 @@ inspect : 检查的意思
 *** 把虚拟机的/var/lib/docker/volumes/658707d40957f61db6f9e042038b0c78fc4f9628736e1173f127b8a5a6a83023/_data 路径挂载到容器的 /usr/share/nginx/html
 
 ```
+3. `查看内容`
+```
+galen@galen-virtual:~$ sudo ls -lt /var/lib/docker/volumes/658707d40957f61db6f9e042038b0c78fc4f9628736e1173f127b8a5a6a83023/_data
+total 8
+-rw-r--r-- 1 root root 537 8月   8 23:25 50x.html
+-rw-r--r-- 1 root root 612 8月   8 23:25 index.html
+```
+4. `进入容器中查看容器的内容`
+```
+* galen@galen-virtual:~$ docker exec -it nginx /bin/bash
+root@293b7216a282:/# 
+
+* root@293b7216a282:/# ls
+bin   dev  home  lib64  mnt  proc  run   srv  tmp  var
+boot  etc  lib   media  opt  root  sbin  sys  usr
+* root@293b7216a282:/# cd /usr/bin/sh
+sha1sum    sha224sum  sha256sum  sha384sum  sha512sum  shred      shuf
+
+* root@293b7216a282:/# cd /usr/share/nginx/html/
+
+* root@293b7216a282:/usr/share/nginx/html# ls 
+50x.html  index.html
+
+* root@293b7216a282:/usr/share/nginx/html# cat index.html 
+
+* root@293b7216a282:~# exit
+exit
+```
+6. `本地的目录(数据卷)挂载在容器的目录上(数据卷)` 
+```
+* galen@galen-virtual:~/dockerfile2$ docker run -p 80:80 -d -v $PWD/html:/usr/share/nginx/html nginx
+bea1dce4fa3dc95cf61124130299ea19c79c2df60fae136b5b0affbef5b6b52d
+* -v : 把本地的目录映射到容器的目录
+-v $PWD/html:/usr/share/nginx/html
+* $PWD ：始终指向当前目录
+```
