--- a/4-1.volume介绍.md
+++ b/4-1.volume介绍.md
@@ -62,4 +62,56 @@ bea1dce4fa3dc95cf61124130299ea19c79c2df60fae136b5b0affbef5b6b52d
 * -v : 把本地的目录映射到容器的目录
 -v $PWD/html:/usr/share/nginx/html
 * $PWD ：始终指向当前目录
+* 本地路径：$PWD/html
+* 容器路径：/usr/share/nginx/html
+```
+7. `获取文件`
+```
+curl http://localhost
+```
+8.  docker create -v $PWD/data:/var/mydata1 --name data_container ubuntu
+```
+-v: volume 存储
+--name data_container : 设置镜像名为 data_container
+ubuntu  ： 基础镜像
+```
+* 没有基础镜像的话就会自动下载
+```
+➜  vol3 docker create -v $PWD/data:/var/mydata1 --name data_container ubuntu
+Unable to find image 'ubuntu:latest' locally
+latest: Pulling from library/ubuntu
+ae79f2514705: Pull complete 
+5ad56d5fc149: Pull complete 
+170e558760e8: Pull complete 
+395460e233f5: Pull complete 
+6f01dc62e444: Pull complete 
+Digest: sha256:506e2d5852de1d7c90d538c5332bd3cc33b9cbd26f6ca653875899c505c82687
+Status: Downloaded newer image for ubuntu:latest
+e942755b46035b78abf9327ae109d46d9a4d084100d972595fc6b71abccc722c
+```
+* 基础镜像没有什么服务
+9. `--volume-from`:`从另外一个容器中挂载`
+```
+➜  vol3 docker run -it --volumes-from data_container ubuntu /bin/bash
+root@2ea2ec1f59d8:/#        //这里进入到容器里面
+
+* -it ： 交互处理
+* shell : /bin/bash
+```
+10. `root@2ea2ec1f59d8:/# mount  //查看挂载的东西`
+```
+可查看从另外的容器中挂载过来的东西
+/dev/sda1 on /var/mydata1 type ext4 (rw,relatime,errors=remount-ro,data=ordered)
+```
+11. `数据挂载成功显示---即数据共享`
+```
+root@2ea2ec1f59d8:/# cd var/mydata1/
+root@2ea2ec1f59d8:/var/mydata1# ls
+root@2ea2ec1f59d8:/var/mydata1# touch whatever.txt
+root@2ea2ec1f59d8:/var/mydata1# exit
+exit
+➜  vol3 cd data 
+➜  data ls
+whatever.txt
+➜  data 
 ```
