--- a/4-1.volume介绍.md
+++ b/4-1.volume介绍.md
@@ -90,7 +90,7 @@ Status: Downloaded newer image for ubuntu:latest
 e942755b46035b78abf9327ae109d46d9a4d084100d972595fc6b71abccc722c
 ```
 * 基础镜像没有什么服务
-9. `--volume-from`:`从另外一个容器中挂载`
+9. `--volumes-from`:`从另外一个容器中挂载`
 ```
 ➜  vol3 docker run -it --volumes-from data_container ubuntu /bin/bash
 root@2ea2ec1f59d8:/#        //这里进入到容器里面
